--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 
 spring:
-  r2dbc:
-    url: r2dbc:mysql://localhost:3306/testdb_spring
-    username: root
-    password: 123456
+  data:
+    jdbc:
+      repositories:
+        enabled: false
+  datasource:
+    url: jdbc:mysql://localhost:3306/todo
