--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://172.17.0.3:3306/clouddisk
+    url: jdbc:mysql://localhost:3306/clouddisk
     username: root
     password: xiaopengfei
   sql:
