--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,9 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+
+    implementation 'org.apache.shiro:shiro-spring-boot-web-starter:1.11.0'
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
