不再使用delete接口，因为会导致问题

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,10 +3,13 @@ spring:
     url: jdbc:mysql://localhost:3306/clouddisk
     username: root
     password: xiaopengfei
+#  mvc:
+#    hiddenmethod:
+#      filter:
+#        enabled: false
   sql:
     init:
       mode: always
-
 
 logging:
   level:
