--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 
+//    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
+//    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
