--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.0.5'
+    id 'org.springframework.boot' version '2.7.10'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'org.graalvm.buildtools.native' version '0.9.20'
 }
@@ -17,15 +17,21 @@ configurations {
 
 repositories {
     mavenCentral()
+
 }
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+    implementation 'org.jasig.cas.client:cas-client-core:3.2.1'
 
-//    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
-//    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+//    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
+//    implementation 'org.springframework.boot:spring-boot-legacy'
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-legacy
 
+//    implementation 'org.springframework.boot:spring-boot-legacy:2.1.0.RELEASE'
+
+//    compileOnly fileTree(dir: "src/main/WEB-INF/lib",includes: ['*.jar'])
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     compileOnly 'org.projectlombok:lombok'
