--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.7.10'
+    id 'org.springframework.boot' version '3.0.5'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'org.graalvm.buildtools.native' version '0.9.20'
 }
@@ -23,7 +23,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-    implementation 'org.jasig.cas.client:cas-client-core:3.2.1'
+
+    implementation 'org.apereo.cas.client:cas-client-core:4.0.1'
 
 //    compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
 //    implementation 'org.springframework.boot:spring-boot-legacy'
