--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,10 +14,10 @@ cas:
   single-logout:
     enabled: true
   authentication-url-patterns:
-    - /file/*
-    - /manage
+    - /login/cas
   server-login-url: https://ids.xidian.edu.cn/authserver/login
   client-host-url: https://dyxt.xidian.edu.cn:443
+  server-url-prefix: https://ids.xidian.edu.cn/authserver
 
 
 logging:
