--- a/build.gradle
+++ b/build.gradle
@@ -23,9 +23,11 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
-
 //    implementation 'org.apereo.cas.client:cas-client-core:4.0.1'
     implementation 'org.apereo.cas.client:cas-client-support-springboot:4.0.1'
+
+    //接口文档
+    implementation("com.github.xiaoymin:knife4j-openapi3-jakarta-spring-boot-starter:4.4.0")
 
     // for preview service
     // word to pdf
